Agregar el script, modificar el mensaje de cuando no hay tareaso etc

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -76,10 +76,10 @@
         </div>
     }
     <div class="posicion-botones">
-        <a class="btn boton-verde fuente mb-5" asp-controller="Clases" asp-action="Index">Gestionar clases</a>
-        <a class="btn boton-azul fuente mb-5" asp-controller="Tareas" asp-action="Index">Gestionar tareas</a>
-        <a class="btn boton-verde fuente mb-5" asp-controller="Materiales" asp-action="Index">Gestionar materiales</a>
-        <a class="btn boton-azul fuente mb-5" asp-controller="Tutorias" asp-action="Index">Gestionar tutorías</a>
+        <a class="btn boton-verde fuente mb-5" asp-controller="Clases" asp-action="Index">Clases</a>
+        <a class="btn boton-azul fuente mb-5" asp-controller="Tareas" asp-action="Index">Tareas</a>
+        <a class="btn boton-verde fuente mb-5" asp-controller="Materiales" asp-action="Index">Materiales</a>
+        <a class="btn boton-azul fuente mb-5" asp-controller="Tutorias" asp-action="Index">Tutorías</a>
     </div>
 </body>
 </html>
