--- a/Views/Clases/Index.cshtml
+++ b/Views/Clases/Index.cshtml
@@ -28,8 +28,7 @@
         }
 
         .celdas-enc, .celdas {
-            padding: 20px;
-            height: 30px;
+            padding: 15px;
             text-align: center;
             border: 2px solid darkgreen;
         }
@@ -73,7 +72,7 @@
             align-items: center; /* Centrar vertical */
         }
 
-        .btnregistrar {
+        .btnagregar {
             background-color: lawngreen;
             color: white;
             position: fixed;
@@ -84,18 +83,49 @@
             justify-content: center;
             align-items: center;
         }
+
+        .eliminar {
+            font-family: 'Georgia', serif; /* Tipo de letra */
+            font-size: 0.80rem; /* Tamaño de letra */
+            font-weight: bold; /* Grosor */
+            background-color: red;
+            border: 2px solid darkred;
+            color: white; /* Color */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: 20px;
+            position: relative;
+            left: 35px; /* Puedes ajustar para que quede más separado */
+        }
+
+        .salir {
+            font-family: 'Georgia', serif; /* Tipo de letra */
+            font-size: 0.80rem; /* Tamaño de letra */
+            font-weight: bold; /* Grosor */
+            background-color: red;
+            border: 2px solid darkred;
+            color: white; /* Color */
+            position: fixed;
+            bottom: 2%;
+            left: 1%;
+            transform: translateX(-1%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
        
     </style>
 </head>
 <body>
 
     <div>
-        <h2 class="fuente-titulo izq-pantalla">Lista de clases</h2>
+        <h2 class="fuente-titulo izq-pantalla" style="color: darkgreen">Lista de clases</h2>
     </div>
 
     @if (rol == "Docente")
     {
-        <a asp-action="Crear" class="btn btnregistrar">Agregar clase</a>
+        <a asp-action="Crear" class="btn btnagregar" style="border: 2px solid darkgreen;">Agregar clase</a>
     }
 
     <div class="posicion-pantalla">
@@ -107,6 +137,7 @@
                         <th class="celdas-enc" style="color: white;">Materia</th>
                         <th class="celdas-enc" style="color: white;">Docente</th>
                         <th class="celdas-enc" style="color: white;">Duración</th>
+                        <th class="celdas-enc" style="color: white;">Eliminar</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -116,6 +147,11 @@
                             <td class="celdas">@item.Materia</td>
                             <td class="celdas">@item.Docente</td>
                             <td class="celdas">@item.DuracionMinutos</td>
+                            <td class="celdas text-center align-middle">
+                                <form asp-action="Eliminar" asp-route-id="@item.Id" method="post" style="display:inline;">
+                                    <button type="submit" class="btn eliminar">Eliminar</button>
+                                </form>
+                            </td>
                         </tr>
                     }
                 </tbody>
@@ -123,8 +159,11 @@
         }
         else
         {
-            <p class="fuente-titulos posicion-pantalla">No hay clases registradas.</p>
+            <p class="fuente-titulos posicion-pantalla text-center">No hay clases registradas.</p>
         }
+    </div>
+    <div>
+        <a asp-controller="Home" asp-action="Index" class="btn salir">Regresar</a>
     </div>
 </body>
 </html>
