--- a/Views/Tutorias/Index.cshtml
+++ b/Views/Tutorias/Index.cshtml
@@ -33,22 +33,22 @@
         }
 
         .fuente-titulo {
-            font-family: 'Georgia', serif; /* Tipo de letra */
-            font-size: 2rem; /* Tamaño de letra */
-            font-weight: bold; /* Grosor */
+            font-family: 'Georgia', serif; 
+            font-size: 2rem;
+            font-weight: bold; 
         }
 
         .fuente-titulos {
-            font-family: 'Georgia', serif; /* Tipo de letra */
-            font-size: 1.5rem; /* Tamaño de letra */
-            font-weight: bold; /* Grosor */
+            font-family: 'Georgia', serif;
+            font-size: 1.5rem;
+            font-weight: bold; 
         }
 
         .fuente-letras {
-            font-family: 'Georgia', serif; /* Tipo de letra */
-            font-size: 1rem; /* Tamaño de letra */
-            font-weight: normal; /* Grosor */
-            color: darkgreen; /* Color */
+            font-family: 'Georgia', serif; 
+            font-size: 1rem; 
+            font-weight: normal;
+            color: darkgreen; 
         }
 
         .izq-pantalla {
@@ -63,12 +63,12 @@
 
         .posicion-pantalla {
             position: fixed;
-            top: 50%; /* 50% desde arriba */
+            top: 50%; 
             left: 50%;
-            transform: translate(-50%, -50%); /* Ajusta para centrar exactamente */
-            display: flex; /* Para usar flexbox */
-            justify-content: center; /* Centrar horizontal */
-            align-items: center; /* Centrar vertical */
+            transform: translate(-50%, -50%);
+            display: flex; 
+            justify-content: center; 
+            align-items: center;
         }
 
         .btnagregar {
@@ -84,27 +84,27 @@
         }
 
         .eliminar {
-            font-family: 'Georgia', serif; /* Tipo de letra */
-            font-size: 0.80rem; /* Tamaño de letra */
-            font-weight: bold; /* Grosor */
+            font-family: 'Georgia', serif; 
+            font-size: 0.80rem; 
+            font-weight: bold; 
             background-color: red;
             border: 2px solid darkred;
-            color: white; /* Color */
+            color: white;
             display: flex;
             justify-content: center;
             align-items: center;
             margin-left: 20px;
             position: relative;
-            left: 35px; /* Puedes ajustar para que quede más separado */
+            left: 35px; 
         }
 
         .salir {
-            font-family: 'Georgia', serif; /* Tipo de letra */
-            font-size: 0.80rem; /* Tamaño de letra */
-            font-weight: bold; /* Grosor */
+            font-family: 'Georgia', serif; 
+            font-size: 0.80rem; 
+            font-weight: bold; 
             background-color: red;
             border: 2px solid darkred;
-            color: white; /* Color */
+            color: white; 
             position: fixed;
             bottom: 2%;
             left: 1%;
@@ -157,7 +157,7 @@
         }
         else
         {
-            <p class="fuente-titulos posicion-pantalla text-center">No hay clases registradas.</p>
+            <p class="fuente-titulos posicion-pantalla text-center">No hay tutorias registradas.</p>
         }
     </div>
     <div>
