--- a/Views/Colaboradores/Index.cshtml
+++ b/Views/Colaboradores/Index.cshtml
@@ -13,12 +13,12 @@
         }
 
         .salir {
-            font-family: 'Georgia', serif; /* Tipo de letra */
-            font-size: 0.80rem; /* Tamaño de letra */
-            font-weight: bold; /* Grosor */
+            font-family: 'Georgia', serif; 
+            font-size: 0.80rem; 
+            font-weight: bold; 
             background-color: red;
             border: 2px solid darkred;
-            color: white; /* Color */
+            color: white; 
             position: fixed;
             bottom: 2%;
             left: 1%;
@@ -36,30 +36,30 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 800px; /* Puedes ajustar ancho según necesidad */
+            width: 800px;
         }
 
         .fuente-titulo {
             text-align: center;
-            font-family: 'Georgia', serif; /* Tipo de letra */
-            font-size: 2rem; /* Tamaño de letra */
-            font-weight: bold; /* Grosor */
-            color: darkgreen; /* Color */
+            font-family: 'Georgia', serif;
+            font-size: 2rem; 
+            font-weight: bold; 
+            color: darkgreen; 
         }
 
         .fuente-letras {
-            font-family: 'Georgia', serif; /* Tipo de letra */
-            font-size: 1rem; /* Tamaño de letra */
-            font-weight: normal; /* Grosor */
-            color: darkgreen; /* Color */
+            font-family: 'Georgia', serif;
+            font-size: 1rem; 
+            font-weight: normal;
+            color: darkgreen; 
         }
 
         .cuadro-personalizado {
-            background-color: white; /* fondo verde claro suave */
-            border: 2.5px solid darkgreen; /* borde verde oscuro */
-            border-radius: 15px; /* bordes redondeados */
-            padding: 18px; /* espacio interno */
-            font-family: 'Georgia', serif; /* fuente */
+            background-color: white;
+            border: 2.5px solid darkgreen;
+            border-radius: 15px; 
+            padding: 18px; 
+            font-family: 'Georgia', serif; 
             height: auto;
             width: auto;
         }
@@ -67,9 +67,9 @@
         .cuadros {
             background-color: white;
             border: 2.5px solid darkgreen; 
-            border-radius: 15px; /* bordes redondeados */
-            padding: 18px; /* espacio interno */
-            font-family: 'Georgia', serif; /* fuente */
+            border-radius: 15px; 
+            padding: 18px; 
+            font-family: 'Georgia', serif;
             height: auto;
             width: auto;
         }
